<resources>
    <string name="app_name">SHB ERP</string>
    <string name="title_activity_stock_query">仓库库存查询</string>
    <string name="title_activity_warehouse_part_main">零部件仓库</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">账号密码登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_active_login">active_login</string>
    <string name="title_activity_stock_out">StockOutActivity</string>
    <string name="title_activity_tcp_client_test">TcpClientTestActivity</string>
    <string name="title_activity_task">任务管理</string>
    <string name="title_activity_conversation_contacts">通讯录</string>
    <string name="title_activity_conversation">消息</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_task_view">任务跟踪</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="turn_on_flashlight">打开手电筒</string>
    <string name="turn_off_flashlight">关闭手电筒</string>
    <string name="part_inv_check">零部件仓库盘点</string>
    <string name="title_activity_stock_check_part_inv">仓库盘点</string>



    <string name="empty_no_message">您暂时还没有消息</string>
    <string name="empty_no_data">暂无数据</string>
    <string name="empty_no_network">网络不太给力，点击重新加载</string>
    <string name="empty_no_search">未找到相关内容</string>
    <string name="empty_no_voucher">暂无代金券</string>




<!--    打印机相关-->
    <string name="discovery_printer">查找打印机</string>
    <string name="paired_printer_list">最近使用打印机列表</string>
    <string name="print_text">打印文本</string>
    <string name="print_1D_barcode">打印一维码</string>
    <string name="print_2D_barcode">打印二维码</string>
    <string name="print_image">打印图片</string>
    <string name="print_express">打印快递单</string>
    <string name="print_receipt">打印小票</string>
    <string name="zebra_log_image" translatable="false">Zebra logo image</string>
    <string name="please_connect_printer">请连接打印机</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="printer_language">打印机语言 ：</string>
    <string name="cpcl_language" translatable="false">CPCL</string>
    <string name="escpos_language" translatable="false">ESCPOS</string>
    <string name="printer_status">获取打印机状态</string>
    <string name="print_configuration">打印配置页</string>
    <string name="bluetooth_not_support">当前设备不支持蓝牙</string>
    <string name="scanning">正在扫描，请稍后</string>
    <string name="select_printer">选择蓝牙打印机</string>
    <string name="not_find_printer">没有找到蓝牙打印机</string>
    <string name="discovery_printer_list">查找打印机列表</string>
    <string name="language_switched_error">打印机正忙, 不能切换</string>
    <string name="language_switched_to_cpcl">切换打印机语言为CPCL</string>
    <string name="not_support_cpcl">当前打印机不支持CPCL</string>
    <string name="language_switched_to_escpos">切换打印机语言为ESCPOS</string>
    <string name="not_support_escpos">当前打印机不支持ESCPOS</string>
    <string name="connect_error">连接异常断开，请查找原因</string>
    <string name="connecting">正在连接，请稍后</string>
    <string name="connect_success">已连接</string>
    <string name="connect_failed">连接失败</string>
    <string name="not_support_printer">不支持当前打印机</string>
    <string name="disconnecting">正在断开连接，请稍后</string>
    <string name="printer_error_not_print">打印机异常, 不能打印</string>
    <string name="printer_ready">就绪</string>
    <string name="printer_busy">正忙</string>
    <string name="printer_cover_open">盖打开</string>
    <string name="printer_media_out">纸用完</string>
    <string name="printing">正在打印, 请稍后</string>
    <string name="bluetooth_printer_list">蓝牙打印机列表</string>




    <!--日历控件-->
    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>

    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>


    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="to_approve_count">待我审批(%d)</string>
    <string name="has_approve_count">我已审批(%d)</string>
    <string name="to_read_count">待阅读(%d)</string>
    <string name="has_read_count">已阅读(%d)</string>
    <string name="my_request_to_approve_count">待审批(%d)</string>
    <string name="my_request_has_approve_count">已审批(%d)</string>
    <string name="request_server_error">请求错误：</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string-array name="week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string-array name="test_name_array">
        <item>余莲方</item>
        <item>常芙蓉</item>
        <item>桂伟松</item>
        <item>李伟锋</item>
        <item>邵家伟</item>
        <item>李忠飞</item>
        <item>LIM XIN YEE</item>
    </string-array>

</resources>
