<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!--&lt;!&ndash; Login progress &ndash;&gt;-->
    <!--<ProgressBar-->
    <!--android:id="@+id/login_progress"-->
    <!--style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:visibility="gone" />-->

    <com.chinashb.www.mobileerp.widget.TitleLayoutManagerView
        android:layout_width="match_parent"
        app:app_hide_back_image="true"
        app:app_title_text="SHB ERP 登录"
        android:layout_height="50dp"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="名字"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:imeOptions="actionUnspecified"
                    android:singleLine="true" />

                    <!--android:inputType="textPassword"-->
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:id="@+id/rg_net_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/main_intranet_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="内网" />

                <RadioButton
                    android:id="@+id/main_internet_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="外网" />
            </RadioGroup>

            <Button
                android:id="@+id/name_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_scan_hr_card_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:text="扫描职工码登录" />

            <Button
                android:id="@+id/main_forget_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:text="忘记密码" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
